--- a/apps/polonium/src/main/resources/templates/hello.html
+++ b/apps/polonium/src/main/resources/templates/hello.html
@@ -42,9 +42,8 @@
                 
                 <img src="/img/single.png" alt="Abstract Petunia" class="petunia-image responsive-img z-depth-1">
                 
-                <p class="flow-text"><em>Project Petunia</em> findest Du hier:<br />
-                <a href="https://petunia.roskenet.de" class="purple-text text-darken-2 waves-effect waves-light">https://petunia.roskenet.de</a></p>
-                
+                <p class="flow-text">Hier entsteht das <em>Project Petunia</em>. <br />
+                Stay tuned for updates!</p>
                 <footer class="section">
                     &copy; 2025 <a href="https://www.felix-roske.de" class="purple-text text-darken-2">Felix Roske</a>
                 </footer>
